# fastrag

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  pyproject.toml
.cargo/: config.toml
.claude/skills/: ci-watcher.md
.github/workflows/: ci.yml  nightly.yml  weekly.yml
bundles/vams-lookup-v1/: bundle.json
clients/python/tests/: test_get_kev.py  test_models.py
crates/fastrag/: Cargo.toml
crates/fastrag-context/: Cargo.toml
crates/fastrag-context/src/: cache.rs  contextualizer.rs  lib.rs  llama.rs  prompt.rs  stage.rs  test_utils.rs
crates/fastrag-context/tests/: stage_fallback.rs
crates/fastrag-core/src/: chunking.rs  document.rs  format.rs  language.rs  lib.rs  output.rs
crates/fastrag-csv/src/: lib.rs
crates/fastrag-cwe/data/: cwe-tree-v4.19.1.json
crates/fastrag-cwe/src/: compile.rs  data.rs  lib.rs  taxonomy.rs
crates/fastrag-cwe/tests/: compile_tool.rs
crates/fastrag-email/: Cargo.toml
crates/fastrag-email/src/: lib.rs
crates/fastrag-embed/: Cargo.toml
crates/fastrag-embed/src/: bge.rs  error.rs  lib.rs  test_utils.rs
crates/fastrag-embed/src/http/: mod.rs  ollama.rs  openai.rs
crates/fastrag-embed/src/llama_cpp/: client.rs  completion_client.rs  handle.rs  mod.rs  model_source.rs  qwen3.rs  runtime.rs  snowflake_arctic.rs
crates/fastrag-embed/tests/: llama_server_handle.rs  qwen3_preset.rs
crates/fastrag-embed/tests/support/: fake_llama_server.rs
crates/fastrag-eval/: Cargo.toml
crates/fastrag-eval/src/: baseline.rs  dataset.rs  error.rs  gold_set.rs  lib.rs  matrix.rs  matrix_real.rs  metrics.rs  report.rs  runner.rs
crates/fastrag-eval/src/datasets/: beir.rs  common.rs  cwe.rs  mod.rs  nfcorpus.rs  nvd.rs  scifact.rs
crates/fastrag-eval/tests/: datasets_network.rs  matrix_stub.rs  union_match.rs
crates/fastrag-eval/tests/fixtures/: baseline_current.json  gold_invalid_dup_id.json  gold_invalid_empty_q.json  gold_invalid_malformed_cve.json  gold_invalid_zero_assertions.json  gold_valid.json  report_bad.json  report_good.json  tiny.json
crates/fastrag-eval/tests/fixtures/datasets/: cwe_mini.xml
crates/fastrag-eval/tests/fixtures/datasets/nfcorpus_mini/: corpus.jsonl  queries.jsonl
crates/fastrag-eval/tests/fixtures/datasets/nfcorpus_mini/qrels/: test.tsv
crates/fastrag-eval/tests/fixtures/datasets/scifact_mini/: corpus.jsonl  queries.jsonl
crates/fastrag-eval/tests/fixtures/datasets/scifact_mini/qrels/: test.tsv
crates/fastrag-html/src/: lib.rs
crates/fastrag-index/: Cargo.toml
crates/fastrag-index/src/: entry.rs  error.rs  fusion.rs  hnsw.rs  identifiers.rs  lib.rs  manifest.rs
crates/fastrag-markdown/src/: lib.rs
crates/fastrag-mcp/: Cargo.toml
crates/fastrag-mcp/src/: lib.rs
crates/fastrag-nvd/fixtures/: nvd_slice.json
crates/fastrag-nvd/src/: schema.rs
crates/fastrag-pdf/: Cargo.toml
crates/fastrag-pdf/benches/: pdf_parsing.rs
crates/fastrag-pdf/src/: images.rs  lib.rs  ocr.rs  table.rs
crates/fastrag-rerank/: Cargo.toml
crates/fastrag-rerank/src/: lib.rs
crates/fastrag-rerank/src/llama_cpp/: client.rs  mod.rs
crates/fastrag-rerank/src/onnx/: mod.rs  model_source.rs
crates/fastrag-rtf/: Cargo.toml
crates/fastrag-rtf/src/: lib.rs
crates/fastrag-store/src/: lib.rs  schema.rs  tantivy.rs
crates/fastrag-tantivy/: Cargo.toml
crates/fastrag-tantivy/src/: error.rs  lib.rs  schema.rs
crates/fastrag/src/: bundle.rs  corpus.rs  lib.rs  ops.rs  registry.rs
crates/fastrag/tests/: cwe_expansion.rs  dedup_synthetic_gate.rs  incremental.rs  jsonl_store_e2e.rs  minhash_verify.rs  nvd_ingest.rs  temporal_decay.rs  temporal_late_injection.rs
deploy/: fastrag.service  healthcheck.sh
docker/: Dockerfile.airgap  README.md  entrypoint.sh
docker/ci/: docker-smoke.sh
docs/: airgap-install.md  chunking-eval.md  embedder-profile-migration.md  eval-baselines.md  vams-integration.md
docs/eval-baselines/: README.md  current.json
docs/superpowers/: roadmap-2026-04-phase2-rewrite.md
docs/superpowers/plans/: 2026-04-07-embedder-invariant-refactor.md  2026-04-07-http-embedders.md  2026-04-07-incremental-indexing.md  2026-04-07-multi-model-candle-embedders.md  2026-04-09-fastembed-backend.md  2026-04-13-corpus-stats-api.md  2026-04-13-cwe-hierarchy-expansion.md  2026-04-13-phase2-closeout.md  2026-04-14-temporal-decay-hybrid-retrieval.md  2026-04-15-eval-axes-and-dated-corpus.md  2026-04-15-minhash-verifier-similar.md  2026-04-16-fastrag-for-vams.md
docs/superpowers/specs/: 2026-04-07-embedder-invariant-refactor-design.md  2026-04-07-multi-model-candle-embedders-design.md  2026-04-09-llama-server-handle-design.md  2026-04-10-contextual-retrieval-design.md  2026-04-11-eval-harness-design.md  2026-04-13-batch-query-federation-design.md  2026-04-13-cwe-hierarchy-expansion-design.md  (+4 more)
eval-baselines/v0-phase1/: README.md  cwe.json  nfcorpus.json  nvd.json  scifact.json
fastrag-cli/: Cargo.toml
fastrag-cli/src/: args.rs  config.rs  context_loader.rs  doctor.rs  embed_loader.rs  embed_profile.rs  eval.rs  eval_matrix.rs  http.rs  lib.rs  main.rs  rerank_loader.rs  test_support.rs
fastrag-cli/tests/: batch_query_e2e.rs  contextual_corpus_e2e.rs  contextual_retry_failed_e2e.rs  contextual_strict_e2e.rs  cwe_expand_e2e.rs  cwe_expand_http_e2e.rs  doctor.rs  embedder_e2e.rs  embedder_profile_cli.rs  embedder_profile_resolution.rs  eval_gold_set_rejects_invalid_e2e.rs  eval_matrix_e2e.rs  eval_smoke.rs  federation_e2e.rs  http_e2e.rs  hybrid_e2e.rs  ingest_e2e.rs  kev_lookup_e2e.rs  llama_cpp_corpus_e2e.rs  ready_probe_e2e.rs  security_profile_e2e.rs  similar_http_e2e.rs  similar_verify_http_e2e.rs  snippet_e2e.rs  stats_e2e.rs  temporal_decay_e2e.rs  temporal_decay_http_e2e.rs  temporal_policy_e2e.rs  viper_assist_smoke.rs
scripts/: axis-backfill.py  build-bundle.sh  build_taxonomy_corpus.py  chunking-sweep.sh  fetch-kev.sh  run-chunking-sweep.sh  run-eval.sh
src/fastrag_client/: __init__.py  async_client.py  models.py
tests/: test_async_client.py
tests/fixtures/: sample.eml  sample.rtf  sample_footnotes.html
tests/gold/: questions.json
(+88 files in other folders)
