[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastrag-client"
version = "0.1.0"
description = "Typed Python client for fastrag's HTTP API"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fastrag_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
