[package]
name = "fastrag-embed"
description = "CPU embedding inference for FastRAG (Snowflake Arctic Embed L via llama.cpp)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json = "1"

# llama-cpp backend dependencies (gated on `llama-cpp` feature)
hf-hub = { version = "0.5.0", default-features = false, features = ["ureq"], optional = true }
dirs = { version = "6.0.0", optional = true }

# HTTP embedders (optional)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt", "macros"] }
serde_json = "1"
tempfile = "3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"], optional = true }

[[bin]]
name = "fake-llama-server"
path = "tests/support/fake_llama_server.rs"
required-features = ["llama-cpp"]

[features]
test-utils = []
http-embedders = ["dep:reqwest"]
llama-cpp = ["http-embedders", "dep:nix", "dep:hf-hub", "dep:dirs"]
