[package]
name = "fastrag-eval"
description = "Evaluation harness for FastRAG retrieval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fastrag-core.workspace = true
fastrag-embed.workspace = true
fastrag-index.workspace = true
hdrhistogram.workspace = true
memory-stats.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tempfile = "3"

[dev-dependencies]
fastrag-embed = { workspace = true, features = ["test-utils"] }

