[package]
name = "fastrag-mcp"
description = "MCP server for FastRAG document parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fastrag.workspace = true
fastrag-embed = { workspace = true, optional = true }
rmcp = { version = "1.2", features = ["server", "transport-io"] }
schemars = "0.8"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
serde_json.workspace = true

[features]
default = []
# `mcp-search` previously wired an in-process candle ONNX embedder
# (BgeSmallEmbedder) into the MCP `search_corpus` tool. That dependency was
# removed during the no-Chinese-origin purge and has no replacement yet; the
# tool now returns "corpus search not wired". Re-enable once a non-Chinese
# ONNX or llama-cpp HTTP embedder is wired into fastrag-mcp.
mcp-search = ["fastrag/retrieval"]
