[package]
name = "fastrag-tantivy"
description = "Tantivy BM25 full-text index for FastRAG hybrid retrieval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fastrag-index.workspace = true
tantivy.workspace = true
thiserror.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
fastrag-embed = { workspace = true, features = ["test-utils"] }
